--- a/index.html
+++ b/index.html
@@ -152,10 +152,10 @@
     <label>Don’t fill this out if you're human: <input name="bot-field" /></label>
   </p>
 			<div class="row gtr-50">
-				<div class="col-6 col-12-mobile"><input type="text" class="text" name="name" placeholder="Name" /></div>
-				<div class="col-6 col-12-mobile"><input type="text" class="text" name="email" placeholder="Email" /></div>
+				<div class="col-6 col-12-mobile"><input type="text" class="text" name="name" placeholder="Name" required /></div>
+				<div class="col-6 col-12-mobile"><input type="text" class="text" name="email" placeholder="Email" required/></div>
 				<div class="col-12">
-					<textarea name="message" placeholder="Message"></textarea>
+					<textarea required name="message" placeholder="Message"></textarea>
 				</div>
 				<div data-netlify-recaptcha="true" ></div>			
 				<div class="col-12">
