--- a/index.html
+++ b/index.html
@@ -18,6 +18,14 @@
 
 <body class="is-preload">
 
+	<!-- CTA for contact form -->
+	<div class="cta__body">
+		<a href="#contact-us" class="cta__button--link">
+		<div class="cta__button"> 
+				<span>Contact Andrew</span>
+		</a>
+</div>
+</div>
 	<!-- Header -->
 	<section id="header">
 		<header>
@@ -34,7 +42,7 @@
 		<header>
 			<h2>Andrew is...</h2>
 		</header>
-		<p>A curious, self-teaching developer focused on creating sensible solutions with web technologies.
+		<p>A curious, self-<em>teaching</em> developer focused on creating sensible solutions with suitable web technologies.
 		</p>
 		<footer>
 			<a href="#first" class="button style2 scrolly">what Andrew has done...</a>
@@ -43,7 +51,7 @@
 
 	<!-- Feature 1 -->
 	<article id="first" class="container box style1 left">
-		<a target="_blank" href="#" class="image fit"><img src="images/socodumps.png" alt="" /></a>
+		<a target="_blank" href="http://www.socodumps.com/" class="image fit"><img src="images/socodumps.png" alt="" /></a>
 		<div class="inner">
 			<header>
 				<h2>SOCO Dumps</h2>
@@ -143,6 +151,7 @@
 
 	<!-- Contact -->
 	<article class="container box style3">
+			<div class="contact__anchor"><a name="contact-us"></a></div>
 		<header>
 			<h2>Contact Andrew Webb</h2>
 			<p>Don't be shy...</p>
@@ -322,7 +331,7 @@
 
 			<li><a target="_blank" href="https://github.com/andrewwebbdeveloper" class="icon fa-github"><span class="label">Github</span></a></li>
 
-			<li><a href="mailto:webmaster@example.com" class="icon fa-envelope"><span class="label">Email</span></a></li>
+			<li><a href="mailto:drewbird87@gmail.com" class="icon fa-envelope"><span class="label">Email</span></a></li>
 
 			<li><a href="#" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
 		</ul>
