added linkedin link

--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
 
 			<li><a href="mailto:drewbird87@gmail.com" class="icon fa-envelope"><span class="label">Email</span></a></li>
 
-			<li><a href="#" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
+			<li><a target="_blank" href="https://www.linkedin.com/in/andrew-webb-web-developer" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
 		</ul>
 
 	</section>
