--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 			<header>
 				<h2>Business Class Cleaners</h2>
 			</header>
-			<p>An informational website highlighting buisness features with a contact form for an office cleaning company in the
+			<p>An informational website highlighting business features with a contact form for an office cleaning company in the
 				Tidewater area of Virginia.
 				<hr>
 				Uses: HTML, pure CSS, and Netlify forms.
@@ -335,7 +335,6 @@
 
 			<li><a target="_blank" href="https://www.linkedin.com/in/andrew-webb-web-developer" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
 		</ul>
-
 	</section>
 
 	<!-- Scripts -->
