added button hover

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	<div class="cta__body">
 		<a href="#contact-us" class="cta__button--link">
 		<div class="cta__button"> 
-				<span>Contact Andrew</span>
+				<span>Contact</span>
 		</a>
 	</div>	
 
